# koco

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
assets/: koco.desktop
src/: main.rs
